--- a/main.html
+++ b/main.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        .clicked {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .container {
+            background-color: lightgray;
+            display: none; /* Default hidden */
+            flex-direction: column;
+            align-items: center;
+            padding: 20px;
+            width: 400px;
+            margin: 20px auto;
+            border-radius: 10px;
+        }
+        .container h2 {
+            background-color: green;
+            height: 50px;
+            width: 100%;
+            color: white;
+            text-align: center;
+            line-height: 50px;
+            border-radius: 5px;
+        }
+		.close{
+			display:flex;
+			justify-content:flex-end;
+		}
+    </style>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <div class="clicked">
+        <button id="click">Click me to open box model</button>
+    </div>
+    <div class="container">
+		<div class="close"><button id = "cancelbtn">&times;</button></div>
+        <h2>Model Header</h2>
+        <p>Hello World!</p>
+    </div>
 
+    <script>
+		let close = document.querySelector ("#cancelbtn")
+        let container = document.querySelector(".container");
+        let btn = document.querySelector("#click");
+
+        btn.addEventListener("click", () => {
+            container.style.display = "block";
+        });
+
+		cancelbtn.addEventListener("click",() => {
+			container.style.display = "none"
+		});
+    </script>
 </body>
-
 </html>
