--- a/main.html
+++ b/main.html
@@ -122,7 +122,7 @@
 <body>
 
    
-    <button id="openModal">Open Modal</button>
+    <button id="openModal">should open modal when button is clicked</button>
 
     <!-- Modal -->
     <div class="modal" id="modal">
