--- a/main.html
+++ b/main.html
@@ -1,69 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <style>
-        .clicked {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .container {
-            background-color: lightgray;
-            display: none; /* Default hidden */
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-            width: 400px;
-            margin: 20px auto;
-            border-radius: 10px;
-        }
-        .container h2 {
-            background-color: green;
-            height: 50px;
-            width: 100%;
-            color: white;
-            text-align: center;
-            line-height: 50px;
-            border-radius: 5px;
-        }
-		.close{
-			display:flex;
-			justify-content:flex-end;
-		}
-    </style>
-</head>
-
-<body>
-    <div class="clicked">
-        <button id="click">Click me to open box model</button>
-    </div>
-    <div class="container">
-		<div class="close"><button id = "cancelbtn">&times;</button></div>
-        <h2>Model Header</h2>
-        <p>Hello World!</p>
-    </div>
-
-    <script>
-		let close = document.querySelector ("#cancelbtn")
-        let container = document.querySelector(".container");
-        let btn = document.querySelector("#click");
-
-        btn.addEventListener("click", () => {
-            container.style.display = "block";
-        });
-
-		cancelbtn.addEventListener("click",() => {
-			container.style.display = "none"
-		});
-    </script>
-</body>
-</html>
- <!-- Open Modal Button -->
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -83,6 +17,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            opacity: 0;
+            transition: opacity 0.2s ease-in-out;
         }
         
         .modal-content {
@@ -117,12 +53,17 @@
         .modal-body {
             padding: 20px;
         }
+
+        /* Show modal when active */
+        .modal.show {
+            display: flex;
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
 
-   
-    <button id="openModal">should open modal when button is clicked</button>
+    <button id="openModal">Open Modal</button>
 
     <!-- Modal -->
     <div class="modal" id="modal">
@@ -144,21 +85,22 @@
 
         // Open modal
         openBtn.addEventListener("click", () => {
-            modal.style.display = "flex";
+            modal.classList.add("show");
         });
 
         // Close modal on close button click
         closeBtn.addEventListener("click", () => {
-            modal.style.display = "none";
+            modal.classList.remove("show");
         });
 
         // Close modal when clicking outside modal-content
         window.addEventListener("click", (event) => {
             if (event.target === modal) {
-                modal.style.display = "none";
+                modal.classList.remove("show");
             }
         });
     </script>
 
 </body>
 </html>
+
