--- a/main.html
+++ b/main.html
@@ -14,18 +14,15 @@
             width: 100%;
             height: 100%;
             background: rgba(0, 0, 0, 0.5); /* Dark overlay */
-            display: flex;
             justify-content: center;
             align-items: center;
-            opacity: 0;
-            transition: opacity 0.2s ease-in-out;
         }
         
         .modal-content {
             background: white;
             width: 400px;
+            padding: 20px;
             border-radius: 10px;
-            overflow: hidden;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
 
@@ -55,9 +52,8 @@
         }
 
         /* Show modal when active */
-        .modal.show {
+        .modal.active {
             display: flex;
-            opacity: 1;
         }
     </style>
 </head>
@@ -79,28 +75,29 @@
     </div>
 
     <script>
-        let modal = document.getElementById("modal");
-        let openBtn = document.getElementById("openModal");
-        let closeBtn = document.querySelector(".close-modal");
+        document.addEventListener("DOMContentLoaded", () => {
+            let modal = document.getElementById("modal");
+            let openBtn = document.getElementById("openModal");
+            let closeBtn = document.querySelector(".close-modal");
 
-        // Open modal
-        openBtn.addEventListener("click", () => {
-            modal.classList.add("show");
-        });
+            // Open modal
+            openBtn.addEventListener("click", () => {
+                modal.classList.add("active");
+            });
 
-        // Close modal on close button click
-        closeBtn.addEventListener("click", () => {
-            modal.classList.remove("show");
-        });
+            // Close modal on close button click
+            closeBtn.addEventListener("click", () => {
+                modal.classList.remove("active");
+            });
 
-        // Close modal when clicking outside modal-content
-        window.addEventListener("click", (event) => {
-            if (event.target === modal) {
-                modal.classList.remove("show");
-            }
+            // Close modal when clicking outside modal-content
+            modal.addEventListener("click", (event) => {
+                if (event.target === modal) {
+                    modal.classList.remove("active");
+                }
+            });
         });
     </script>
 
 </body>
 </html>
-
